trying to fix header on mobile

--- a/_includes/css/cover.css
+++ b/_includes/css/cover.css
@@ -139,7 +139,7 @@ i {
     background-size: 400px;
   }
 
-  .header {
+  .container .header {
     height: 120px;
   }
 }
